<resources>
    <string name="app_name">LEADERBOARD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_2">These are the Skill IQ Leaders</string>
    <string name="tab_1">These are the Learning Leaders</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_not_succesful">Submission not Successful</string>
    <string name="submission_succesful">Submission Successful</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="textview2">TextView2</string>
    <string name="textview1">TextView1</string>
</resources>
